examples/test/testpolicy2661.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2661
  namespace: namespace390
spec:
  podSelector:
    matchLabels:
      key21: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value28
      podSelector:
        matchLabels:
          key41: value29
          key37: value13
          key19: value23
